# smartHMM

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  configure_cmake.sh  format.sh  loc.sh  meson.build
cmake/: RequireLibrary.cmake
src/: CMakeLists.txt  smart-hmm.cc  smart-hmm.h
src/scientific/ml/: smart-hmm  smart-hmm.h
test/: CMakeLists.txt  test.cc
test/scientific/ml/test/: smart-hmm.cc
